--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //Room
-    implementation 'androidx.room:room-common:2.4.1'
-    def room_version = "2.3.0"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation 'androidx.room:room-common:2.4.2'
+    implementation "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
 
     //Testing
     testImplementation 'junit:junit:4.+'
