--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/Theme.SimpleKnowledgeBase.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
