ImportDatabase.kt+MainActivity, improved csv import approach found with library apache-csv

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
+
+    implementation 'org.apache.commons:commons-csv:1.9.0'
 
 
     // UI
